2004-01-28  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/totem-preferences.c: (totem_setup_preferences):
	Remove an gconf call, info was already available in a variable.

2004-01-25  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (store_tag),
	(bacon_video_widget_signal_idler): Implement metadata with the new 
	architecture.

2004-01-25  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init),
	(bacon_video_widget_signal_idler), (got_found_tag),
	(bacon_video_widget_close): Fixing metadata tags, and a bug when
	loading a media from command line.

2004-01-18  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-v4l-selection.h:
	* src/gnome-caption-table.h:
	* src/totem-preferences.h:
	* src/totem.h: Fixing some compilation warnings.

2004-01-16  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_video_property): Removing a warning when
	slider reaches the edges.

2004-01-16  Julien MOUTTE <julien@moutte.net>

	* data/totem.schemas.in: Adding hue and saturation gconf keys.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): Removing
	some debugging g_message.
	* src/bacon-video-widget-xine.c: (setup_config_stream): Fixing my own
	stupidity... i will write a 1000 times "i should not commit before
	having compiled with --enable-xine at least only once."

2004-01-15  Julien MOUTTE <julien@moutte.net>

	* data/totem.glade: Adding saturation and hue slider transforming the
	display notebook in a real colorbalance configuration interface.
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property), (bacon_video_widget_new):
	Implementing colorbalance and software sound mixer.
	* src/bacon-video-widget-xine.c: Implementing hue and saturation.
	* src/bacon-video-widget.h: Adding hue and saturation.
	* src/totem-preferences.c: (saturation_changed), (hue_changed),